<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/artistsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_half"
                android:background="@drawable/bg_search"
                app:layout_scrollFlags="scroll|snap|enterAlways"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                >

            <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard"
                    android:layout_marginRight="@dimen/standard_half"
                    app:srcCompat="@drawable/ic_search"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="ContentDescription,RtlHardcoded"
                    />

            <ImageView
                    android:id="@+id/clearSearchView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/standard_half"
                    android:paddingRight="@dimen/standard"
                    app:srcCompat="@drawable/ic_clear"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="ContentDescription,RtlHardcoded"
                    />

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:layout_margin="@dimen/standard_half"
                    android:textAppearance="@style/Body2Dark"
                    android:textColor="@null"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/searchIcon"
                    app:layout_constraintRight_toLeftOf="@+id/clearSearchView"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artistsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />
</androidx.coordinatorlayout.widget.CoordinatorLayout>