<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_half"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="UnusedAttribute"
        >

    <ImageView
            android:id="@+id/pictureView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:foreground="@drawable/circle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="ContentDescription,UnusedAttribute"
            />

    <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standard_half"
            android:textAppearance="@style/Body2"
            app:layout_constraintLeft_toRightOf="@+id/pictureView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:maxLines="1"
            android:ellipsize="end"
            tools:ignore="RtlHardcoded"
            />
</androidx.constraintlayout.widget.ConstraintLayout>